{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "43a970a2-a87c-4b1c-a0c4-f455f097373d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c3c9cba0-e18a-4747-b5a7-999acb2a838b",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "03309bdf-0f14-4e01-9acf-4f3d922de621",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4a7976bb-195f-4850-8cc0-bb294176d154",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "75d5cb38-b3f0-4ce1-a55b-e434278405a8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "578e0fd8-34dd-4d10-8366-62d7b9857df7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "829b8742-77b0-4591-bc58-ea4b6cf66021",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a5534b90-cf72-4df8-9a3d-525dc253eac1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f32a4dde-3bc7-4120-835d-61ee82ab4360",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "PC",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIControls",
            "id": "3ebc930e-b6c1-431f-9c0a-222c7af43e58",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b0f1a61c-8c95-4339-8a13-a143ab366cc1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "43bb9701-33cf-450b-97c4-a606c45cb7b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bb1047e1-3a90-4d46-a51d-18a2192baadb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4f3a48f-a06f-4fed-8472-8f929e8c9ab2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EnviromentControls",
            "id": "a9a72a03-97cc-4838-a640-67766f99537d",
            "actions": [
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "b14b4d30-d240-458e-94ac-ca29a15cf287",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "46edc469-cc80-43d7-a6ba-ba9b9f5ed2e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractionAction",
                    "type": "Button",
                    "id": "3dc7feb9-829c-48e7-9be2-a1b0f2d4515d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "fde467c2-8816-4622-83ba-4f013ec23f84",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9fd3a07c-cff5-4319-a4b7-8f24f056272d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d0b8edd-64da-46b7-9b8a-3edc85037ff6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a4d3b9c-b261-4b74-80e4-398553998f96",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d7f0f8c-a262-4025-93e2-ba032ea8e075",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "InteractionAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}